# hc4-oled

./: Cargo.toml  Dockerfile  LICENSE  README.md  example.avif  kubernetes.yaml  renovate.json
.github/workflows/: build-image.yaml
src/: main.rs  signals.rs  units.rs
src/components/: disk.rs  hostname.rs  load.rs  memory.rs  mod.rs  network.rs  update_indicator.rs  uptime.rs
