[package]
name = "oled"
version = "0.3.0"
authors = ["Simon Brüggen <github@m3t0r.de>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssd1306 = "^0.10.0"
i2c-linux = "^0.1.2"
embedded-graphics = "^0.8.0"
display-interface = "^0.5.0"
embedded-hal = "^1.0.0"
clap = {version="^4.0.0", features=["derive", "env"]}

hostname = "^0.4.0"
nix = {version="^0.31.0", features=["fs"]}
systemstat = "^0.2.0"
