[package]
name = "oled"
version = "0.3.0"
authors = ["Simon Brüggen <github@m3t0r.de>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["i2c"]
i2c = ["dep:display-interface", "dep:embedded-hal", "dep:i2c-linux", "dep:ssd1306"]
simulator = ["dep:embedded-graphics-simulator"]

[dependencies]
ssd1306 = { version = "^0.10.0", optional = true }
i2c-linux = { version = "^0.1.2", optional = true }
embedded-graphics = "^0.8.0"
embedded-graphics-simulator = { version = "^0.8.0", optional = true }
display-interface = { version = "^0.5.0", optional = true }
embedded-hal = { version = "^1.0.0", optional = true }
clap = {version="^4.0.0", features=["derive", "env"]}

hostname = "^0.4.0"
nix = {version="^0.31.0", features=["fs", "signal"]}
systemstat = "^0.2.0"
